- Metod .score() and .fit_score() in Models

--- a/01_Quick_Start.ipynb
+++ b/01_Quick_Start.ipynb
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "AutoML-Alex version: 1.2.24\n"
+      "AutoML-Alex version: 1.2.25\n"
      ]
     }
    ],
@@ -197,22 +197,22 @@
       "##################################################\n",
       "> Start Opt Model\n",
       "classifier optimize: maximize\n",
-      "One iteration takes ~ 4.0 sec\n",
+      "One iteration takes ~ 2.3 sec\n",
       "> Start Auto calibration parameters\n",
       "> Start optimization with the parameters:\n",
       "CV_Folds =  5\n",
       "Score_CV_Folds =  2\n",
       "Feature_Selection =  True\n",
-      "Opt_lvl =  1\n",
-      "Cold_start =  64.0\n",
+      "Opt_lvl =  2\n",
+      "Cold_start =  37.0\n",
       "Early_stoping =  100\n",
       "Metric =  roc_auc_score\n",
       "Direction =  maximize\n",
       "##################################################\n",
       "Default model OptScore = 0.9037\n",
       "optimize: maximize\n",
-      "[I 2021-02-23 22:51:26,806] A new study created in memory with name: no-name-3e13417f-b03f-48ba-8e2b-762b505b9e61\n",
-      "Optimize: : 91it [08:50,  5.83s/it,  | Model: LightGBM | OptScore: 0.9113 | Best roc_auc_score: 0.9113 +- 0.003456]\n",
+      "[I 2021-02-24 14:09:29,655] A new study created in memory with name: no-name-c97af4ae-573a-418a-acbb-27709c857a5d\n",
+      "Optimize: : 52it [08:46, 10.12s/it,  | Model: LightGBM | OptScore: 0.9122 | Best roc_auc_score: 0.9122 +- 0.003604]\n",
       "Not enough time to find the optimal parameters. \n",
       "                     Please, Increase the 'timeout' parameter for normal optimization.\n",
       "##################################################\n",
@@ -229,29 +229,24 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'AutoMLClassifier' object has no attribute 'model_2'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-a43683c41d7c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpredicts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/envs/ds/lib/python3.8/site-packages/automl_alex/automl_alex.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X, verbose)\u001b[0m\n\u001b[1;32m    293\u001b[0m             \u001b[0mpredict_model_4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_select_features_model_4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    294\u001b[0m             \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 295\u001b[0;31m             \u001b[0mpredict_model_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    296\u001b[0m             \u001b[0mpredict_model_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    297\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'AutoMLClassifier' object has no attribute 'model_2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predicts = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Test AUC:  0.9125\n"
+     ]
+    }
+   ],
    "source": [
     "print('Test AUC: ', round(sklearn.metrics.roc_auc_score(y_test, predicts),4))"
    ]
@@ -265,9 +260,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Save DataPrepare\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'builtin_function_or_method' and 'str'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-334fdc8dd664>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'AutoML_model_3'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/ds/lib/python3.8/site-packages/automl_alex/automl_alex.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(self, name, folder)\u001b[0m\n\u001b[1;32m    314\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mde\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'DataPrepare_dump'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfolder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdir_tmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    315\u001b[0m         \u001b[0mjoblib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir_tmp\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'AutoML'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 316\u001b[0;31m         \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_archive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'zip'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir_tmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    317\u001b[0m         \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmtree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir_tmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    318\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Save AutoML'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'builtin_function_or_method' and 'str'"
+     ]
+    }
+   ],
    "source": [
     "model.save('AutoML_model_3')"
    ]
@@ -308,9 +323,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "((430, 19), (76, 19))"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
    "source": [
     "# https://www.openml.org/d/543\n",
     "dataset = fetch_openml(data_id=543, as_frame=True)\n",
@@ -325,9 +351,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                   TOWN  TOWN_ID   TRACT      LON      LAT  MEDV  CMEDV  \\\n",
+       "104             Medford     24.0  3395.0 -71.0690  42.2480  20.1   20.1   \n",
+       "203              Weston     37.0  3671.0 -71.1990  42.2320  48.5   48.5   \n",
+       "381  Boston_East_Boston     79.0   407.0 -71.0410  42.2290  10.9   10.9   \n",
+       "489             Chelsea     89.0  1602.0 -71.0228  42.2335   7.0    7.0   \n",
+       "69           Wilmington     16.0  3313.0 -71.1110  42.3270  20.9   20.9   \n",
+       "\n",
+       "         CRIM    ZN  INDUS CHAS     NOX     RM   AGE     DIS RAD    TAX  \\\n",
+       "104   0.13960   0.0   8.56    0  0.5200  6.167  90.0  2.4210   5  384.0   \n",
+       "203   0.03510  95.0   2.68    0  0.4161  7.853  33.2  5.1180   4  224.0   \n",
+       "381  15.87440   0.0  18.10    0  0.6710  6.545  99.1  1.5192  24  666.0   \n",
+       "489   0.18337   0.0  27.74    0  0.6090  5.414  98.3  1.7554   4  711.0   \n",
+       "69    0.12816  12.5   6.07    0  0.4090  5.885  33.0  6.4980   4  345.0   \n",
+       "\n",
+       "     PTRATIO       B  \n",
+       "104     20.9  392.69  \n",
+       "203     14.7  392.78  \n",
+       "381     20.2  396.90  \n",
+       "489     20.1  344.05  \n",
+       "69      18.9  396.90  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TOWN</th>\n      <th>TOWN_ID</th>\n      <th>TRACT</th>\n      <th>LON</th>\n      <th>LAT</th>\n      <th>MEDV</th>\n      <th>CMEDV</th>\n      <th>CRIM</th>\n      <th>ZN</th>\n      <th>INDUS</th>\n      <th>CHAS</th>\n      <th>NOX</th>\n      <th>RM</th>\n      <th>AGE</th>\n      <th>DIS</th>\n      <th>RAD</th>\n      <th>TAX</th>\n      <th>PTRATIO</th>\n      <th>B</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>104</th>\n      <td>Medford</td>\n      <td>24.0</td>\n      <td>3395.0</td>\n      <td>-71.0690</td>\n      <td>42.2480</td>\n      <td>20.1</td>\n      <td>20.1</td>\n      <td>0.13960</td>\n      <td>0.0</td>\n      <td>8.56</td>\n      <td>0</td>\n      <td>0.5200</td>\n      <td>6.167</td>\n      <td>90.0</td>\n      <td>2.4210</td>\n      <td>5</td>\n      <td>384.0</td>\n      <td>20.9</td>\n      <td>392.69</td>\n    </tr>\n    <tr>\n      <th>203</th>\n      <td>Weston</td>\n      <td>37.0</td>\n      <td>3671.0</td>\n      <td>-71.1990</td>\n      <td>42.2320</td>\n      <td>48.5</td>\n      <td>48.5</td>\n      <td>0.03510</td>\n      <td>95.0</td>\n      <td>2.68</td>\n      <td>0</td>\n      <td>0.4161</td>\n      <td>7.853</td>\n      <td>33.2</td>\n      <td>5.1180</td>\n      <td>4</td>\n      <td>224.0</td>\n      <td>14.7</td>\n      <td>392.78</td>\n    </tr>\n    <tr>\n      <th>381</th>\n      <td>Boston_East_Boston</td>\n      <td>79.0</td>\n      <td>407.0</td>\n      <td>-71.0410</td>\n      <td>42.2290</td>\n      <td>10.9</td>\n      <td>10.9</td>\n      <td>15.87440</td>\n      <td>0.0</td>\n      <td>18.10</td>\n      <td>0</td>\n      <td>0.6710</td>\n      <td>6.545</td>\n      <td>99.1</td>\n      <td>1.5192</td>\n      <td>24</td>\n      <td>666.0</td>\n      <td>20.2</td>\n      <td>396.90</td>\n    </tr>\n    <tr>\n      <th>489</th>\n      <td>Chelsea</td>\n      <td>89.0</td>\n      <td>1602.0</td>\n      <td>-71.0228</td>\n      <td>42.2335</td>\n      <td>7.0</td>\n      <td>7.0</td>\n      <td>0.18337</td>\n      <td>0.0</td>\n      <td>27.74</td>\n      <td>0</td>\n      <td>0.6090</td>\n      <td>5.414</td>\n      <td>98.3</td>\n      <td>1.7554</td>\n      <td>4</td>\n      <td>711.0</td>\n      <td>20.1</td>\n      <td>344.05</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>Wilmington</td>\n      <td>16.0</td>\n      <td>3313.0</td>\n      <td>-71.1110</td>\n      <td>42.3270</td>\n      <td>20.9</td>\n      <td>20.9</td>\n      <td>0.12816</td>\n      <td>12.5</td>\n      <td>6.07</td>\n      <td>0</td>\n      <td>0.4090</td>\n      <td>5.885</td>\n      <td>33.0</td>\n      <td>6.4980</td>\n      <td>4</td>\n      <td>345.0</td>\n      <td>18.9</td>\n      <td>396.90</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
    "source": [
     "X_train.head(5)"
    ]
@@ -341,9 +398,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Source data shape:  (430, 19)\n",
+      "##################################################\n",
+      "! START preprocessing Data\n",
+      "> Binary Features\n",
+      "> Clean Categorical Features\n",
+      "> CleanOutliers\n",
+      "Num of outlier detected: 47 in Feature CRIM\n",
+      "Proportion of outlier detected: 10.9 %\n",
+      "Num of outlier detected: 60 in Feature B\n",
+      "Proportion of outlier detected: 14.0 %\n",
+      "Num of outlier detected: 26 in Feature MEDV\n",
+      "Proportion of outlier detected: 6.0 %\n",
+      "Num of outlier detected: 27 in Feature CMEDV\n",
+      "Proportion of outlier detected: 6.3 %\n",
+      "Num of outlier detected: 1 in Feature DIS\n",
+      "Proportion of outlier detected: 0.2 %\n",
+      "Num of outlier detected: 49 in Feature ZN\n",
+      "Proportion of outlier detected: 11.4 %\n",
+      "Num of outlier detected: 15 in Feature RM\n",
+      "Proportion of outlier detected: 3.5 %\n",
+      "Num of outlier detected: 18 in Feature LON\n",
+      "Proportion of outlier detected: 4.2 %\n",
+      "  No nans features\n",
+      "> Generate interaction Num Features\n",
+      " ADD features: 360\n",
+      "> Reduce_Memory\n",
+      "Memory usage of dataframe is 0.73 MB\n",
+      "Memory usage after optimization is: 0.62 MB\n",
+      "Decreased by 14.0%\n",
+      "##################################################\n",
+      "Final data shape:  (430, 395)\n",
+      "Total ADD columns: 376\n",
+      "##################################################\n",
+      "> Start Fit Base Models\n",
+      "##################################################\n",
+      "> Start Opt Model\n",
+      "regression optimize: minimize\n",
+      "One iteration takes ~ 3.5 sec\n",
+      "> Start Auto calibration parameters\n",
+      "> Start optimization with the parameters:\n",
+      "CV_Folds =  5\n",
+      "Score_CV_Folds =  2\n",
+      "Feature_Selection =  True\n",
+      "Opt_lvl =  1\n",
+      "Cold_start =  68.0\n",
+      "Early_stoping =  100\n",
+      "Metric =  mean_squared_error\n",
+      "Direction =  minimize\n",
+      "##################################################\n",
+      "Default model OptScore = 13.0767\n",
+      "optimize: minimize\n",
+      "Optimize: : 48it [08:14, 10.29s/it,  | Model: LightGBM | OptScore: 0.8882 | Best mean_squared_error: 0.8882 +- 0.003615]\n",
+      "Not enough time to find the optimal parameters. \n",
+      "                     Please, Increase the 'timeout' parameter for normal optimization.\n",
+      "##################################################\n",
+      "> Finish!\n"
+     ]
+    }
+   ],
    "source": [
     "model = AutoMLRegressor(random_state=RANDOM_SEED,)\n",
     "model = model.fit(X_train, y_train, timeout=600, verbose=1)"
@@ -351,13 +471,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Test MSE:  6.7483\n"
+     ]
+    }
+   ],
    "source": [
     "predicts = model.predict(X_test)\n",
     "print('Test MSE: ', round(sklearn.metrics.mean_squared_error(y_test, predicts),4))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
