--- a/03_Models.ipynb
+++ b/03_Models.ipynb
@@ -54,7 +54,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.2.24\n"
+            "1.2.25\n"
           ]
         }
       ]
@@ -176,10 +176,10 @@
             " - Encoder: HelmertEncoder ADD features: 123\n",
             " - Encoder: CountEncoder ADD features: 12\n",
             "> CleanOutliers\n",
-            "Num of outlier detected: 253 in Feature education-num\n",
-            "Proportion of outlier detected: 0.6 %\n",
             "Num of outlier detected: 560 in Feature fnlwgt\n",
             "Proportion of outlier detected: 1.4 %\n",
+            "Num of outlier detected: 253 in Feature education-num\n",
+            "Proportion of outlier detected: 0.6 %\n",
             "  No nans features\n",
             "> Generate interaction Num Features\n",
             " ADD features: 3\n",
@@ -268,23 +268,23 @@
               "3                       3582                        35123   \n",
               "4                       1339                        35123   \n",
               "\n",
-              "   education-num_Is_Outliers_IQR  fnlwgt_Is_Outliers_IQR  \\\n",
-              "0                              0                       0   \n",
-              "1                              0                       0   \n",
-              "2                              0                       0   \n",
-              "3                              0                       0   \n",
-              "4                              0                       0   \n",
+              "   fnlwgt_Is_Outliers_IQR  education-num_Is_Outliers_IQR  \\\n",
+              "0                       0                              0   \n",
+              "1                       0                              0   \n",
+              "2                       0                              0   \n",
+              "3                       0                              0   \n",
+              "4                       0                              0   \n",
               "\n",
-              "   education-num_/_fnlwgt  education-num_*_fnlwgt  education-num_-_fnlwgt  \n",
-              "0                0.000177                456777.0                -50744.0  \n",
-              "1                0.000097               2020914.0               -144337.0  \n",
-              "2                0.000032               2017736.0               -252209.0  \n",
-              "3                0.000129                625725.0                -69516.0  \n",
-              "4                0.000315                257508.0                -28603.0  \n",
+              "   fnlwgt_/_education-num  fnlwgt_*_education-num  fnlwgt_-_education-num  \n",
+              "0             5639.222168                456777.0                 50744.0  \n",
+              "1            10310.786133               2020914.0                144337.0  \n",
+              "2            31527.125000               2017736.0                252209.0  \n",
+              "3             7725.000000                625725.0                 69516.0  \n",
+              "4             3179.111084                257508.0                 28603.0  \n",
               "\n",
               "[5 rows x 154 columns]"
             ],
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>workclass</th>\n      <th>fnlwgt</th>\n      <th>education</th>\n      <th>education-num</th>\n      <th>marital-status</th>\n      <th>occupation</th>\n      <th>relationship</th>\n      <th>race</th>\n      <th>sex</th>\n      <th>...</th>\n      <th>CountEncoder_race</th>\n      <th>CountEncoder_capitalgain</th>\n      <th>CountEncoder_capitalloss</th>\n      <th>CountEncoder_hoursperweek</th>\n      <th>CountEncoder_native-country</th>\n      <th>education-num_Is_Outliers_IQR</th>\n      <th>fnlwgt_Is_Outliers_IQR</th>\n      <th>education-num_/_fnlwgt</th>\n      <th>education-num_*_fnlwgt</th>\n      <th>education-num_-_fnlwgt</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n      <td>50753.0</td>\n      <td>1</td>\n      <td>9.0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>33425</td>\n      <td>35788</td>\n      <td>37253</td>\n      <td>22283</td>\n      <td>35123</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.000177</td>\n      <td>456777.0</td>\n      <td>-50744.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>2</td>\n      <td>144351.0</td>\n      <td>2</td>\n      <td>14.0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>33425</td>\n      <td>35788</td>\n      <td>37253</td>\n      <td>22283</td>\n      <td>35123</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.000097</td>\n      <td>2020914.0</td>\n      <td>-144337.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>3</td>\n      <td>252217.0</td>\n      <td>3</td>\n      <td>8.0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>33425</td>\n      <td>35788</td>\n      <td>37253</td>\n      <td>22283</td>\n      <td>35123</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.000032</td>\n      <td>2017736.0</td>\n      <td>-252209.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>1</td>\n      <td>69525.0</td>\n      <td>1</td>\n      <td>9.0</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>33425</td>\n      <td>35788</td>\n      <td>37253</td>\n      <td>3582</td>\n      <td>35123</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.000129</td>\n      <td>625725.0</td>\n      <td>-69516.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3</td>\n      <td>4</td>\n      <td>28612.0</td>\n      <td>1</td>\n      <td>9.0</td>\n      <td>3</td>\n      <td>5</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>33425</td>\n      <td>35788</td>\n      <td>37253</td>\n      <td>1339</td>\n      <td>35123</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.000315</td>\n      <td>257508.0</td>\n      <td>-28603.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 154 columns</p>\n</div>"
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>workclass</th>\n      <th>fnlwgt</th>\n      <th>education</th>\n      <th>education-num</th>\n      <th>marital-status</th>\n      <th>occupation</th>\n      <th>relationship</th>\n      <th>race</th>\n      <th>sex</th>\n      <th>...</th>\n      <th>CountEncoder_race</th>\n      <th>CountEncoder_capitalgain</th>\n      <th>CountEncoder_capitalloss</th>\n      <th>CountEncoder_hoursperweek</th>\n      <th>CountEncoder_native-country</th>\n      <th>fnlwgt_Is_Outliers_IQR</th>\n      <th>education-num_Is_Outliers_IQR</th>\n      <th>fnlwgt_/_education-num</th>\n      <th>fnlwgt_*_education-num</th>\n      <th>fnlwgt_-_education-num</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n      <td>50753.0</td>\n      <td>1</td>\n      <td>9.0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>33425</td>\n      <td>35788</td>\n      <td>37253</td>\n      <td>22283</td>\n      <td>35123</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5639.222168</td>\n      <td>456777.0</td>\n      <td>50744.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>2</td>\n      <td>144351.0</td>\n      <td>2</td>\n      <td>14.0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>33425</td>\n      <td>35788</td>\n      <td>37253</td>\n      <td>22283</td>\n      <td>35123</td>\n      <td>0</td>\n      <td>0</td>\n      <td>10310.786133</td>\n      <td>2020914.0</td>\n      <td>144337.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>3</td>\n      <td>252217.0</td>\n      <td>3</td>\n      <td>8.0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>33425</td>\n      <td>35788</td>\n      <td>37253</td>\n      <td>22283</td>\n      <td>35123</td>\n      <td>0</td>\n      <td>0</td>\n      <td>31527.125000</td>\n      <td>2017736.0</td>\n      <td>252209.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>1</td>\n      <td>69525.0</td>\n      <td>1</td>\n      <td>9.0</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>33425</td>\n      <td>35788</td>\n      <td>37253</td>\n      <td>3582</td>\n      <td>35123</td>\n      <td>0</td>\n      <td>0</td>\n      <td>7725.000000</td>\n      <td>625725.0</td>\n      <td>69516.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3</td>\n      <td>4</td>\n      <td>28612.0</td>\n      <td>1</td>\n      <td>9.0</td>\n      <td>3</td>\n      <td>5</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>33425</td>\n      <td>35788</td>\n      <td>37253</td>\n      <td>1339</td>\n      <td>35123</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3179.111084</td>\n      <td>257508.0</td>\n      <td>28603.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 154 columns</p>\n</div>"
           },
           "metadata": {},
           "execution_count": 6
@@ -411,13 +411,36 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test AUC:  0.9058\n"
+            "Test AUC:  0.906\n"
           ]
         }
       ],
       "source": [
         "predicts = model.predict_proba(X_test)\n",
         "print('Test AUC: ', round(sklearn.metrics.roc_auc_score(y_test, predicts),4))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "roc_auc_score: 0.906\n"
+          ]
+        }
+      ],
+      "source": [
+        "# or just use .score()\n",
+        "score = model.score(\n",
+        "    X_test, y_test,\n",
+        "    metric=sklearn.metrics.roc_auc_score,\n",
+        "    metric_round=4,\n",
+        "    print_metric=True,\n",
+        "    )"
       ]
     },
     {
@@ -1489,7 +1512,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.5-final"
+      "version": "3.8.3-final"
     },
     "toc": {
       "base_numbering": 1,
