add class cross_validation

--- a/01_Quick_Start.ipynb
+++ b/01_Quick_Start.ipynb
@@ -197,22 +197,22 @@
       "##################################################\n",
       "> Start Opt Model\n",
       "classifier optimize: maximize\n",
-      "One iteration takes ~ 2.3 sec\n",
+      "One iteration takes ~ 2.4 sec\n",
       "> Start Auto calibration parameters\n",
       "> Start optimization with the parameters:\n",
       "CV_Folds =  5\n",
       "Score_CV_Folds =  2\n",
       "Feature_Selection =  True\n",
       "Opt_lvl =  2\n",
-      "Cold_start =  37.0\n",
+      "Cold_start =  35.0\n",
       "Early_stoping =  100\n",
       "Metric =  roc_auc_score\n",
       "Direction =  maximize\n",
       "##################################################\n",
       "Default model OptScore = 0.9037\n",
       "optimize: maximize\n",
-      "[I 2021-02-24 14:09:29,655] A new study created in memory with name: no-name-c97af4ae-573a-418a-acbb-27709c857a5d\n",
-      "Optimize: : 52it [08:46, 10.12s/it,  | Model: LightGBM | OptScore: 0.9122 | Best roc_auc_score: 0.9122 +- 0.003604]\n",
+      "[I 2021-02-24 15:02:22,026] A new study created in memory with name: no-name-d0156543-d7b1-4e93-a61d-ab135610a9a8\n",
+      "Optimize: : 62it [08:45,  8.48s/it,  | Model: LightGBM | OptScore: 0.9118 | Best roc_auc_score: 0.9118 +- 0.002809]\n",
       "Not enough time to find the optimal parameters. \n",
       "                     Please, Increase the 'timeout' parameter for normal optimization.\n",
       "##################################################\n",
@@ -267,19 +267,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Save DataPrepare\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'builtin_function_or_method' and 'str'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-334fdc8dd664>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'AutoML_model_3'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/envs/ds/lib/python3.8/site-packages/automl_alex/automl_alex.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(self, name, folder)\u001b[0m\n\u001b[1;32m    314\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mde\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'DataPrepare_dump'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfolder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdir_tmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    315\u001b[0m         \u001b[0mjoblib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir_tmp\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'AutoML'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 316\u001b[0;31m         \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_archive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'zip'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir_tmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    317\u001b[0m         \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmtree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir_tmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    318\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Save AutoML'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'builtin_function_or_method' and 'str'"
+      "Save DataPrepare\n",
+      "Save AutoML\n"
      ]
     }
    ],
@@ -289,9 +278,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Load DataPrepare\n",
+      "Load AutoML\n"
+     ]
+    }
+   ],
    "source": [
     "model_new = AutoMLClassifier(random_state=RANDOM_SEED,)\n",
     "model_new = model_new.load('AutoML_model_3')"
@@ -299,9 +297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Test AUC:  0.9125\n"
+     ]
+    }
+   ],
    "source": [
     "predicts = model_new.predict(X_test)\n",
     "print('Test AUC: ', round(sklearn.metrics.roc_auc_score(y_test, predicts),4))"
