--- a/examples/01_Quick_Start.ipynb
+++ b/examples/01_Quick_Start.ipynb
@@ -167,6 +167,36 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "> Start Fit Base Model\n",
+      "> DATA PREPROC\n",
+      "Source data shape:  (36631, 14)\n",
+      "##################################################\n",
+      "! START preprocessing Data\n",
+      "- Auto detect cat features:  12\n",
+      "> Binary Features\n",
+      "> Clean Categorical Features\n",
+      "> Transform Categorical Features.\n",
+      " - Encoder: OneHotEncoder ADD features: 135\n",
+      " - Encoder: CountEncoder ADD features: 12\n",
+      "> CleanOutliers\n",
+      "Num of outlier detected: 527 in Feature fnlwgt\n",
+      "Proportion of outlier detected: 1.4 %\n",
+      "Num of outlier detected: 231 in Feature education-num\n",
+      "Proportion of outlier detected: 0.6 %\n",
+      "  No nans features\n",
+      "> Generate interaction Num Features\n",
+      " ADD features: 3\n",
+      "> Normalization Features\n",
+      "> Reduce_Memory\n",
+      "Memory usage of dataframe is 13.38 MB\n",
+      "Memory usage after optimization is: 8.73 MB\n",
+      "Decreased by 34.7%\n",
+      "##################################################\n",
+      "Final data shape:  (36631, 166)\n",
+      "Total ADD columns: 152\n",
+      "##################################################\n",
+      "> Start Fit Models 1\n",
+      "> DATA PREPROC\n",
       "Source data shape:  (36631, 14)\n",
       "##################################################\n",
       "! START preprocessing Data\n",
@@ -178,10 +208,10 @@
       " - Encoder: CountEncoder ADD features: 12\n",
       " - Encoder: HashingEncoder ADD features: 12\n",
       "> CleanOutliers\n",
-      "Num of outlier detected: 231 in Feature education-num\n",
-      "Proportion of outlier detected: 0.6 %\n",
       "Num of outlier detected: 527 in Feature fnlwgt\n",
       "Proportion of outlier detected: 1.4 %\n",
+      "Num of outlier detected: 231 in Feature education-num\n",
+      "Proportion of outlier detected: 0.6 %\n",
       "  No nans features\n",
       "> Generate interaction Num Features\n",
       " ADD features: 3\n",
@@ -193,28 +223,36 @@
       "Final data shape:  (36631, 166)\n",
       "Total ADD columns: 152\n",
       "##################################################\n",
-      "> Start Fit Base Models\n",
+      "> Start Fit Models 2\n",
       "##################################################\n",
       "> Start Opt Model\n",
       "classifier optimize: maximize\n",
-      "One iteration takes ~ 2.4 sec\n",
+      "One iteration takes ~ 1.7 sec\n",
       "> Start Auto calibration parameters\n",
       "> Start optimization with the parameters:\n",
-      "CV_Folds =  5\n",
-      "Score_CV_Folds =  2\n",
+      "CV_Folds =  10\n",
+      "Score_CV_Folds =  3\n",
       "Feature_Selection =  True\n",
       "Opt_lvl =  2\n",
-      "Cold_start =  35.0\n",
+      "Cold_start =  31.0\n",
       "Early_stoping =  100\n",
       "Metric =  roc_auc_score\n",
       "Direction =  maximize\n",
       "##################################################\n",
-      "Default model OptScore = 0.9037\n",
+      "Default model OptScore = 0.9065\n",
       "optimize: maximize\n",
-      "[I 2021-02-24 15:02:22,026] A new study created in memory with name: no-name-d0156543-d7b1-4e93-a61d-ab135610a9a8\n",
-      "Optimize: : 62it [08:45,  8.48s/it,  | Model: LightGBM | OptScore: 0.9118 | Best roc_auc_score: 0.9118 +- 0.002809]\n",
-      "Not enough time to find the optimal parameters. \n",
-      "                     Please, Increase the 'timeout' parameter for normal optimization.\n",
+      "[I 2021-02-26 01:17:25,167] A new study created in memory with name: no-name-825c34fb-7286-45df-ad75-d2c280b3a8c6\n",
+      "Optimize: : 93it [13:51,  8.94s/it,  | Model: LightGBM | OptScore: 0.9108 | Best roc_auc_score: 0.9136 +- 0.002796]\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
       "##################################################\n",
       "> Finish!\n"
      ]
@@ -222,7 +260,7 @@
    ],
    "source": [
     "model = AutoMLClassifier(random_state=RANDOM_SEED,)\n",
-    "model = model.fit(X_train, y_train, timeout=600)"
+    "model = model.fit(X_train, y_train, timeout=1000)"
    ]
   },
   {
@@ -243,7 +281,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Test AUC:  0.9125\n"
+      "Test AUC:  0.9138\n"
      ]
     }
    ],
@@ -260,43 +298,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Save DataPrepare\n",
-      "Save AutoML\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.save('AutoML_model_3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Load DataPrepare\n",
-      "Load AutoML\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_new = AutoMLClassifier(random_state=RANDOM_SEED,)\n",
-    "model_new = model_new.load('AutoML_model_3')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -304,7 +305,58 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Test AUC:  0.9125\n"
+      "Save DataPrepare\n",
+      "Save DataPrepare\n",
+      "Save CrossValidation\n",
+      "Save AutoML\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('AutoML_model_1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Load DataPrepare\n",
+      "Load DataPrepare\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Load CrossValidation\n",
+      "Load AutoML\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_new = AutoMLClassifier(random_state=RANDOM_SEED,)\n",
+    "model_new = model_new.load('AutoML_model_1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Test AUC:  0.9136\n"
      ]
     }
    ],
@@ -329,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +392,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 5
     }
    ],
    "source": [
@@ -357,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +440,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TOWN</th>\n      <th>TOWN_ID</th>\n      <th>TRACT</th>\n      <th>LON</th>\n      <th>LAT</th>\n      <th>MEDV</th>\n      <th>CMEDV</th>\n      <th>CRIM</th>\n      <th>ZN</th>\n      <th>INDUS</th>\n      <th>CHAS</th>\n      <th>NOX</th>\n      <th>RM</th>\n      <th>AGE</th>\n      <th>DIS</th>\n      <th>RAD</th>\n      <th>TAX</th>\n      <th>PTRATIO</th>\n      <th>B</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>104</th>\n      <td>Medford</td>\n      <td>24.0</td>\n      <td>3395.0</td>\n      <td>-71.0690</td>\n      <td>42.2480</td>\n      <td>20.1</td>\n      <td>20.1</td>\n      <td>0.13960</td>\n      <td>0.0</td>\n      <td>8.56</td>\n      <td>0</td>\n      <td>0.5200</td>\n      <td>6.167</td>\n      <td>90.0</td>\n      <td>2.4210</td>\n      <td>5</td>\n      <td>384.0</td>\n      <td>20.9</td>\n      <td>392.69</td>\n    </tr>\n    <tr>\n      <th>203</th>\n      <td>Weston</td>\n      <td>37.0</td>\n      <td>3671.0</td>\n      <td>-71.1990</td>\n      <td>42.2320</td>\n      <td>48.5</td>\n      <td>48.5</td>\n      <td>0.03510</td>\n      <td>95.0</td>\n      <td>2.68</td>\n      <td>0</td>\n      <td>0.4161</td>\n      <td>7.853</td>\n      <td>33.2</td>\n      <td>5.1180</td>\n      <td>4</td>\n      <td>224.0</td>\n      <td>14.7</td>\n      <td>392.78</td>\n    </tr>\n    <tr>\n      <th>381</th>\n      <td>Boston_East_Boston</td>\n      <td>79.0</td>\n      <td>407.0</td>\n      <td>-71.0410</td>\n      <td>42.2290</td>\n      <td>10.9</td>\n      <td>10.9</td>\n      <td>15.87440</td>\n      <td>0.0</td>\n      <td>18.10</td>\n      <td>0</td>\n      <td>0.6710</td>\n      <td>6.545</td>\n      <td>99.1</td>\n      <td>1.5192</td>\n      <td>24</td>\n      <td>666.0</td>\n      <td>20.2</td>\n      <td>396.90</td>\n    </tr>\n    <tr>\n      <th>489</th>\n      <td>Chelsea</td>\n      <td>89.0</td>\n      <td>1602.0</td>\n      <td>-71.0228</td>\n      <td>42.2335</td>\n      <td>7.0</td>\n      <td>7.0</td>\n      <td>0.18337</td>\n      <td>0.0</td>\n      <td>27.74</td>\n      <td>0</td>\n      <td>0.6090</td>\n      <td>5.414</td>\n      <td>98.3</td>\n      <td>1.7554</td>\n      <td>4</td>\n      <td>711.0</td>\n      <td>20.1</td>\n      <td>344.05</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>Wilmington</td>\n      <td>16.0</td>\n      <td>3313.0</td>\n      <td>-71.1110</td>\n      <td>42.3270</td>\n      <td>20.9</td>\n      <td>20.9</td>\n      <td>0.12816</td>\n      <td>12.5</td>\n      <td>6.07</td>\n      <td>0</td>\n      <td>0.4090</td>\n      <td>5.885</td>\n      <td>33.0</td>\n      <td>6.4980</td>\n      <td>4</td>\n      <td>345.0</td>\n      <td>18.9</td>\n      <td>396.90</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 6
     }
    ],
    "source": [
@@ -404,33 +456,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "> Start Fit Base Model\n",
+      "> DATA PREPROC\n",
       "Source data shape:  (430, 19)\n",
       "##################################################\n",
       "! START preprocessing Data\n",
       "> Binary Features\n",
       "> Clean Categorical Features\n",
       "> CleanOutliers\n",
-      "Num of outlier detected: 47 in Feature CRIM\n",
-      "Proportion of outlier detected: 10.9 %\n",
-      "Num of outlier detected: 60 in Feature B\n",
-      "Proportion of outlier detected: 14.0 %\n",
       "Num of outlier detected: 26 in Feature MEDV\n",
       "Proportion of outlier detected: 6.0 %\n",
-      "Num of outlier detected: 27 in Feature CMEDV\n",
-      "Proportion of outlier detected: 6.3 %\n",
       "Num of outlier detected: 1 in Feature DIS\n",
       "Proportion of outlier detected: 0.2 %\n",
-      "Num of outlier detected: 49 in Feature ZN\n",
-      "Proportion of outlier detected: 11.4 %\n",
+      "Num of outlier detected: 47 in Feature CRIM\n",
+      "Proportion of outlier detected: 10.9 %\n",
       "Num of outlier detected: 15 in Feature RM\n",
       "Proportion of outlier detected: 3.5 %\n",
+      "Num of outlier detected: 27 in Feature CMEDV\n",
+      "Proportion of outlier detected: 6.3 %\n",
+      "Num of outlier detected: 60 in Feature B\n",
+      "Proportion of outlier detected: 14.0 %\n",
+      "Num of outlier detected: 49 in Feature ZN\n",
+      "Proportion of outlier detected: 11.4 %\n",
+      "Num of outlier detected: 18 in Feature LON\n",
+      "Proportion of outlier detected: 4.2 %\n",
+      "  No nans features\n",
+      "> Generate interaction Num Features\n",
+      " ADD features: 360\n",
+      "> Normalization Features\n",
+      "> Reduce_Memory\n",
+      "Memory usage of dataframe is 1.30 MB\n",
+      "Memory usage after optimization is: 0.63 MB\n",
+      "Decreased by 51.6%\n",
+      "##################################################\n",
+      "Final data shape:  (430, 395)\n",
+      "Total ADD columns: 376\n",
+      "##################################################\n",
+      "> Start Fit Models 1\n",
+      "> DATA PREPROC\n",
+      "Source data shape:  (430, 19)\n",
+      "##################################################\n",
+      "! START preprocessing Data\n",
+      "> Binary Features\n",
+      "> Clean Categorical Features\n",
+      "> CleanOutliers\n",
+      "Num of outlier detected: 26 in Feature MEDV\n",
+      "Proportion of outlier detected: 6.0 %\n",
+      "Num of outlier detected: 1 in Feature DIS\n",
+      "Proportion of outlier detected: 0.2 %\n",
+      "Num of outlier detected: 47 in Feature CRIM\n",
+      "Proportion of outlier detected: 10.9 %\n",
+      "Num of outlier detected: 15 in Feature RM\n",
+      "Proportion of outlier detected: 3.5 %\n",
+      "Num of outlier detected: 27 in Feature CMEDV\n",
+      "Proportion of outlier detected: 6.3 %\n",
+      "Num of outlier detected: 60 in Feature B\n",
+      "Proportion of outlier detected: 14.0 %\n",
+      "Num of outlier detected: 49 in Feature ZN\n",
+      "Proportion of outlier detected: 11.4 %\n",
       "Num of outlier detected: 18 in Feature LON\n",
       "Proportion of outlier detected: 4.2 %\n",
       "  No nans features\n",
@@ -444,27 +534,36 @@
       "Final data shape:  (430, 395)\n",
       "Total ADD columns: 376\n",
       "##################################################\n",
-      "> Start Fit Base Models\n",
+      "> Start Fit Models 2\n",
       "##################################################\n",
       "> Start Opt Model\n",
       "regression optimize: minimize\n",
-      "One iteration takes ~ 3.5 sec\n",
+      "One iteration takes ~ 2.2 sec\n",
       "> Start Auto calibration parameters\n",
       "> Start optimization with the parameters:\n",
-      "CV_Folds =  5\n",
-      "Score_CV_Folds =  2\n",
+      "CV_Folds =  10\n",
+      "Score_CV_Folds =  3\n",
       "Feature_Selection =  True\n",
-      "Opt_lvl =  1\n",
-      "Cold_start =  68.0\n",
+      "Opt_lvl =  2\n",
+      "Cold_start =  23.0\n",
       "Early_stoping =  100\n",
       "Metric =  mean_squared_error\n",
       "Direction =  minimize\n",
       "##################################################\n",
-      "Default model OptScore = 13.0767\n",
+      "Default model OptScore = 18.5211\n",
       "optimize: minimize\n",
-      "Optimize: : 48it [08:14, 10.29s/it,  | Model: LightGBM | OptScore: 0.8882 | Best mean_squared_error: 0.8882 +- 0.003615]\n",
-      "Not enough time to find the optimal parameters. \n",
-      "                     Please, Increase the 'timeout' parameter for normal optimization.\n",
+      "[I 2021-02-26 01:40:39,262] A new study created in memory with name: no-name-b6dd959e-5d6e-476a-b28f-2e9a80d4a54f\n",
+      "Optimize: : 99it [13:15,  8.03s/it,  | Model: LightGBM | OptScore: 14.0881 | Best mean_squared_error: 11.0407 +- 3.047438]\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
+      "Finished loading model, total used 300 iterations\n",
       "##################################################\n",
       "> Finish!\n"
      ]
@@ -472,19 +571,19 @@
    ],
    "source": [
     "model = AutoMLRegressor(random_state=RANDOM_SEED,)\n",
-    "model = model.fit(X_train, y_train, timeout=600, verbose=1)"
+    "model = model.fit(X_train, y_train, timeout=900, verbose=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Test MSE:  6.7483\n"
+      "Test MSE:  6.9864\n"
      ]
     }
    ],
