--- a/examples/01_Quick_Start.ipynb
+++ b/examples/01_Quick_Start.ipynb
@@ -260,7 +260,7 @@
    ],
    "source": [
     "model = AutoMLClassifier(random_state=RANDOM_SEED,)\n",
-    "model = model.fit(X_train, y_train, timeout=1000)"
+    "model.fit(X_train, y_train, timeout=1000)"
    ]
   },
   {
