--- a/examples/prod_sample/fit_model.ipynb
+++ b/examples/prod_sample/fit_model.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-07T01:05:50.878720Z",
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "AutoML-Alex version: 1.02.15\n"
+      "AutoML-Alex version: 1.2.28\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-07T01:05:52.553896Z",
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('openml_id_543_train.csv')\n",
+    "data = pd.read_csv('./dataset/openml_id_543_train.csv')\n",
     "data.head(5)"
    ]
   },
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.3-final"
   },
   "toc": {
    "base_numbering": 1,
