--- a/05_BestSingleModel.ipynb
+++ b/05_BestSingleModel.ipynb
@@ -40,7 +40,7 @@
     "import pandas as pd\n",
     "import time\n",
     "from automl_alex import DataPrepare\n",
-    "from automl_alex import AutoML, AutoMLClassifier, AutoMLRegressor\n",
+    "from automl_alex import BestSingleModel, BestSingleModelClassifier, BestSingleModelRegressor\n",
     "print('AutoML-Alex version:', automl_alex.__version__)"
    ]
   },
@@ -146,14 +146,14 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(dataset.data, \n",
     "                                                    dataset.target,\n",
-    "                                                    test_size=0.25, \n",
+    "                                                    test_size=0.2, \n",
     "                                                    random_state=RANDOM_SEED,)\n",
     "X_train.shape, X_test.shape"
    ]
   },
   {
    "source": [
-    "## AutoML"
+    "## BestSingleModel"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -274,7 +274,11 @@
     }
    ],
    "source": [
-    "model = AutoMLClassifier(random_state=RANDOM_SEED,)\n",
+    "model = BestSingleModelClassifier(\n",
+    "    models_names = ['LightGBM', 'ExtraTrees', 'RandomForest', 'XGBoost'],\n",
+    "    auto_parameters=True,\n",
+    "    feature_selection=True,\n",
+    "    random_state=RANDOM_SEED,)\n",
     "model.fit(X_train, y_train, timeout=600)"
    ]
   },
@@ -326,6 +330,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.best_model_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.best_model_param"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select Features \n",
+    "# if feature_selection=True\n",
+    "model.select_columns[:5]"
+   ]
+  },
+  {
    "source": [
     "## Save & Load"
    ],
@@ -347,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_new = AutoMLClassifier(random_state=RANDOM_SEED,)\n",
+    "model_new = BestSingleModelClassifier(random_state=RANDOM_SEED,)\n",
     "model_new = model_new.load('AutoML_model_1')"
    ]
   },
@@ -359,233 +392,6 @@
    "source": [
     "predicts = model_new.predict(X_test)\n",
     "print('Test AUC: ', round(sklearn.metrics.roc_auc_score(y_test, predicts),4))"
-   ]
-  },
-  {
-   "source": [
-    "# Regression"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "## Data"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "((430, 19), (76, 19))"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
-   "source": [
-    "# https://www.openml.org/d/543\n",
-    "dataset = fetch_openml(data_id=543, as_frame=True)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(pd.DataFrame(dataset.data), \n",
-    "                                                    pd.DataFrame(dataset.target), \n",
-    "                                                    test_size=0.15, \n",
-    "                                                    random_state=RANDOM_SEED,)\n",
-    "\n",
-    "X_train.shape, X_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                   TOWN  TOWN_ID   TRACT      LON      LAT  MEDV  CMEDV  \\\n",
-       "104             Medford     24.0  3395.0 -71.0690  42.2480  20.1   20.1   \n",
-       "203              Weston     37.0  3671.0 -71.1990  42.2320  48.5   48.5   \n",
-       "381  Boston_East_Boston     79.0   407.0 -71.0410  42.2290  10.9   10.9   \n",
-       "489             Chelsea     89.0  1602.0 -71.0228  42.2335   7.0    7.0   \n",
-       "69           Wilmington     16.0  3313.0 -71.1110  42.3270  20.9   20.9   \n",
-       "\n",
-       "         CRIM    ZN  INDUS CHAS     NOX     RM   AGE     DIS RAD    TAX  \\\n",
-       "104   0.13960   0.0   8.56    0  0.5200  6.167  90.0  2.4210   5  384.0   \n",
-       "203   0.03510  95.0   2.68    0  0.4161  7.853  33.2  5.1180   4  224.0   \n",
-       "381  15.87440   0.0  18.10    0  0.6710  6.545  99.1  1.5192  24  666.0   \n",
-       "489   0.18337   0.0  27.74    0  0.6090  5.414  98.3  1.7554   4  711.0   \n",
-       "69    0.12816  12.5   6.07    0  0.4090  5.885  33.0  6.4980   4  345.0   \n",
-       "\n",
-       "     PTRATIO       B  \n",
-       "104     20.9  392.69  \n",
-       "203     14.7  392.78  \n",
-       "381     20.2  396.90  \n",
-       "489     20.1  344.05  \n",
-       "69      18.9  396.90  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TOWN</th>\n      <th>TOWN_ID</th>\n      <th>TRACT</th>\n      <th>LON</th>\n      <th>LAT</th>\n      <th>MEDV</th>\n      <th>CMEDV</th>\n      <th>CRIM</th>\n      <th>ZN</th>\n      <th>INDUS</th>\n      <th>CHAS</th>\n      <th>NOX</th>\n      <th>RM</th>\n      <th>AGE</th>\n      <th>DIS</th>\n      <th>RAD</th>\n      <th>TAX</th>\n      <th>PTRATIO</th>\n      <th>B</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>104</th>\n      <td>Medford</td>\n      <td>24.0</td>\n      <td>3395.0</td>\n      <td>-71.0690</td>\n      <td>42.2480</td>\n      <td>20.1</td>\n      <td>20.1</td>\n      <td>0.13960</td>\n      <td>0.0</td>\n      <td>8.56</td>\n      <td>0</td>\n      <td>0.5200</td>\n      <td>6.167</td>\n      <td>90.0</td>\n      <td>2.4210</td>\n      <td>5</td>\n      <td>384.0</td>\n      <td>20.9</td>\n      <td>392.69</td>\n    </tr>\n    <tr>\n      <th>203</th>\n      <td>Weston</td>\n      <td>37.0</td>\n      <td>3671.0</td>\n      <td>-71.1990</td>\n      <td>42.2320</td>\n      <td>48.5</td>\n      <td>48.5</td>\n      <td>0.03510</td>\n      <td>95.0</td>\n      <td>2.68</td>\n      <td>0</td>\n      <td>0.4161</td>\n      <td>7.853</td>\n      <td>33.2</td>\n      <td>5.1180</td>\n      <td>4</td>\n      <td>224.0</td>\n      <td>14.7</td>\n      <td>392.78</td>\n    </tr>\n    <tr>\n      <th>381</th>\n      <td>Boston_East_Boston</td>\n      <td>79.0</td>\n      <td>407.0</td>\n      <td>-71.0410</td>\n      <td>42.2290</td>\n      <td>10.9</td>\n      <td>10.9</td>\n      <td>15.87440</td>\n      <td>0.0</td>\n      <td>18.10</td>\n      <td>0</td>\n      <td>0.6710</td>\n      <td>6.545</td>\n      <td>99.1</td>\n      <td>1.5192</td>\n      <td>24</td>\n      <td>666.0</td>\n      <td>20.2</td>\n      <td>396.90</td>\n    </tr>\n    <tr>\n      <th>489</th>\n      <td>Chelsea</td>\n      <td>89.0</td>\n      <td>1602.0</td>\n      <td>-71.0228</td>\n      <td>42.2335</td>\n      <td>7.0</td>\n      <td>7.0</td>\n      <td>0.18337</td>\n      <td>0.0</td>\n      <td>27.74</td>\n      <td>0</td>\n      <td>0.6090</td>\n      <td>5.414</td>\n      <td>98.3</td>\n      <td>1.7554</td>\n      <td>4</td>\n      <td>711.0</td>\n      <td>20.1</td>\n      <td>344.05</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>Wilmington</td>\n      <td>16.0</td>\n      <td>3313.0</td>\n      <td>-71.1110</td>\n      <td>42.3270</td>\n      <td>20.9</td>\n      <td>20.9</td>\n      <td>0.12816</td>\n      <td>12.5</td>\n      <td>6.07</td>\n      <td>0</td>\n      <td>0.4090</td>\n      <td>5.885</td>\n      <td>33.0</td>\n      <td>6.4980</td>\n      <td>4</td>\n      <td>345.0</td>\n      <td>18.9</td>\n      <td>396.90</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "source": [
-    "X_train.head(5)"
-   ]
-  },
-  {
-   "source": [
-    "## AutoML"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "> Start Fit Base Model\n",
-      "> DATA PREPROC\n",
-      "Source data shape:  (430, 19)\n",
-      "##################################################\n",
-      "! START preprocessing Data\n",
-      "> Binary Features\n",
-      "> Clean Categorical Features\n",
-      "> CleanOutliers\n",
-      "Num of outlier detected: 26 in Feature MEDV\n",
-      "Proportion of outlier detected: 6.0 %\n",
-      "Num of outlier detected: 1 in Feature DIS\n",
-      "Proportion of outlier detected: 0.2 %\n",
-      "Num of outlier detected: 47 in Feature CRIM\n",
-      "Proportion of outlier detected: 10.9 %\n",
-      "Num of outlier detected: 15 in Feature RM\n",
-      "Proportion of outlier detected: 3.5 %\n",
-      "Num of outlier detected: 27 in Feature CMEDV\n",
-      "Proportion of outlier detected: 6.3 %\n",
-      "Num of outlier detected: 60 in Feature B\n",
-      "Proportion of outlier detected: 14.0 %\n",
-      "Num of outlier detected: 49 in Feature ZN\n",
-      "Proportion of outlier detected: 11.4 %\n",
-      "Num of outlier detected: 18 in Feature LON\n",
-      "Proportion of outlier detected: 4.2 %\n",
-      "  No nans features\n",
-      "> Generate interaction Num Features\n",
-      " ADD features: 360\n",
-      "> Normalization Features\n",
-      "> Reduce_Memory\n",
-      "Memory usage of dataframe is 1.30 MB\n",
-      "Memory usage after optimization is: 0.63 MB\n",
-      "Decreased by 51.6%\n",
-      "##################################################\n",
-      "Final data shape:  (430, 395)\n",
-      "Total ADD columns: 376\n",
-      "##################################################\n",
-      "> Start Fit Models 1\n",
-      "> DATA PREPROC\n",
-      "Source data shape:  (430, 19)\n",
-      "##################################################\n",
-      "! START preprocessing Data\n",
-      "> Binary Features\n",
-      "> Clean Categorical Features\n",
-      "> CleanOutliers\n",
-      "Num of outlier detected: 26 in Feature MEDV\n",
-      "Proportion of outlier detected: 6.0 %\n",
-      "Num of outlier detected: 1 in Feature DIS\n",
-      "Proportion of outlier detected: 0.2 %\n",
-      "Num of outlier detected: 47 in Feature CRIM\n",
-      "Proportion of outlier detected: 10.9 %\n",
-      "Num of outlier detected: 15 in Feature RM\n",
-      "Proportion of outlier detected: 3.5 %\n",
-      "Num of outlier detected: 27 in Feature CMEDV\n",
-      "Proportion of outlier detected: 6.3 %\n",
-      "Num of outlier detected: 60 in Feature B\n",
-      "Proportion of outlier detected: 14.0 %\n",
-      "Num of outlier detected: 49 in Feature ZN\n",
-      "Proportion of outlier detected: 11.4 %\n",
-      "Num of outlier detected: 18 in Feature LON\n",
-      "Proportion of outlier detected: 4.2 %\n",
-      "  No nans features\n",
-      "> Generate interaction Num Features\n",
-      " ADD features: 360\n",
-      "> Reduce_Memory\n",
-      "Memory usage of dataframe is 0.73 MB\n",
-      "Memory usage after optimization is: 0.62 MB\n",
-      "Decreased by 14.0%\n",
-      "##################################################\n",
-      "Final data shape:  (430, 395)\n",
-      "Total ADD columns: 376\n",
-      "##################################################\n",
-      "> Start Fit Models 2\n",
-      "##################################################\n",
-      "> Start Opt Model\n",
-      "regression optimize: minimize\n",
-      "One iteration takes ~ 2.2 sec\n",
-      "> Start Auto calibration parameters\n",
-      "> Start optimization with the parameters:\n",
-      "CV_Folds =  10\n",
-      "Score_CV_Folds =  3\n",
-      "Feature_Selection =  True\n",
-      "Opt_lvl =  2\n",
-      "Cold_start =  23.0\n",
-      "Early_stoping =  100\n",
-      "Metric =  mean_squared_error\n",
-      "Direction =  minimize\n",
-      "##################################################\n",
-      "Default model OptScore = 18.5211\n",
-      "optimize: minimize\n",
-      "[I 2021-02-26 01:40:39,262] A new study created in memory with name: no-name-b6dd959e-5d6e-476a-b28f-2e9a80d4a54f\n",
-      "Optimize: : 99it [13:15,  8.03s/it,  | Model: LightGBM | OptScore: 14.0881 | Best mean_squared_error: 11.0407 +- 3.047438]\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "##################################################\n",
-      "> Finish!\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = AutoMLRegressor(random_state=RANDOM_SEED,)\n",
-    "model = model.fit(X_train, y_train, timeout=900, verbose=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Test MSE:  6.9864\n"
-     ]
-    }
-   ],
-   "source": [
-    "predicts = model.predict(X_test)\n",
-    "print('Test MSE: ', round(sklearn.metrics.mean_squared_error(y_test, predicts),4))"
    ]
   },
   {
