--- a/examples/01_Quick_Start.ipynb
+++ b/examples/01_Quick_Start.ipynb
@@ -567,7 +567,7 @@
    ],
    "source": [
     "model = AutoMLRegressor(random_state=RANDOM_SEED,)\n",
-    "model = model.fit(X_train, y_train, timeout=900, verbose=1)"
+    "model.fit(X_train, y_train, timeout=900, verbose=1)"
    ]
   },
   {
