--- a/examples/04_ModelsReview.ipynb
+++ b/examples/04_ModelsReview.ipynb
@@ -66,7 +66,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.2.28\n"
+            "1.3.4\n"
           ]
         }
       ]
@@ -198,7 +198,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "((36631, 154), (12211, 154))"
+              "((36631, 156), (12211, 156))"
             ]
           },
           "metadata": {},
@@ -256,7 +256,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9/9 [01:37<00:00, 10.81s/it]\n"
+            "100%|██████████| 8/8 [01:53<00:00, 14.23s/it]\n"
           ]
         }
       ],
@@ -280,17 +280,16 @@
           "data": {
             "text/plain": [
               "     Model_Name   Score  Time_Fit_Sec\n",
-              "0      LightGBM  0.9094          4.93\n",
-              "1    KNeighbors  0.8471         18.42\n",
-              "2   LinearModel  0.9103          1.77\n",
-              "3           SGD  0.7556          1.78\n",
-              "4  RandomForest  0.8832          2.62\n",
-              "5    ExtraTrees  0.8441          3.48\n",
-              "6       XGBoost  0.7676         26.41\n",
-              "7      CatBoost  0.9120         17.17\n",
-              "8           MLP  0.9095         20.71"
+              "0      LightGBM  0.9092          2.73\n",
+              "1    KNeighbors  0.8479         34.42\n",
+              "2   LinearModel  0.9102          1.07\n",
+              "3  RandomForest  0.8842          2.92\n",
+              "4    ExtraTrees  0.8513          3.43\n",
+              "5       XGBoost  0.7676         31.20\n",
+              "6      CatBoost  0.9122         16.84\n",
+              "7           MLP  0.9093         21.18"
             ],
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Model_Name</th>\n      <th>Score</th>\n      <th>Time_Fit_Sec</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LightGBM</td>\n      <td>0.9094</td>\n      <td>4.93</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>KNeighbors</td>\n      <td>0.8471</td>\n      <td>18.42</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>LinearModel</td>\n      <td>0.9103</td>\n      <td>1.77</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>SGD</td>\n      <td>0.7556</td>\n      <td>1.78</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>RandomForest</td>\n      <td>0.8832</td>\n      <td>2.62</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>ExtraTrees</td>\n      <td>0.8441</td>\n      <td>3.48</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>XGBoost</td>\n      <td>0.7676</td>\n      <td>26.41</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>CatBoost</td>\n      <td>0.9120</td>\n      <td>17.17</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>MLP</td>\n      <td>0.9095</td>\n      <td>20.71</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Model_Name</th>\n      <th>Score</th>\n      <th>Time_Fit_Sec</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LightGBM</td>\n      <td>0.9092</td>\n      <td>2.73</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>KNeighbors</td>\n      <td>0.8479</td>\n      <td>34.42</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>LinearModel</td>\n      <td>0.9102</td>\n      <td>1.07</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>RandomForest</td>\n      <td>0.8842</td>\n      <td>2.92</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ExtraTrees</td>\n      <td>0.8513</td>\n      <td>3.43</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>XGBoost</td>\n      <td>0.7676</td>\n      <td>31.20</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>CatBoost</td>\n      <td>0.9122</td>\n      <td>16.84</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>MLP</td>\n      <td>0.9093</td>\n      <td>21.18</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
           },
           "metadata": {},
           "execution_count": 9
@@ -310,6 +309,13 @@
       "source": [],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
